# BFG-AUTO

./: README.md  sprint1.md
arduino/: arduino.ino
control/: .ycm_extra_conf.py  CMakeLists.txt  compile_commands.json  main.cpp
control/include/: detector.hpp
control/src/: detector.cpp
